--- a/css/styles.css
+++ b/css/styles.css
@@ -99,14 +99,13 @@ img {
   align-items: start;
   max-width: 1200px;
   padding: 0.5555555556rem;
-  margin: 0 auto;
-  justify-items: center;
-  justify-content: center;
-  justify-self: center;
+  margin-left: auto;
+  margin-right: auto;
   margin-top: 7.1111111111rem;
 }
 @media (0 <= width < 500px) {
   .container {
+    padding: 0;
     margin-top: 3.5555555556rem;
   }
 }
@@ -116,18 +115,12 @@ img {
   position: relative;
   font-weight: 600;
   font-size: 1rem;
-  padding-right: 7.1111111111rem;
   line-height: 2rem;
   margin-bottom: 3.5555555556rem;
 }
 @media (0 <= width < 900px) {
   .title {
     margin-bottom: 1.7777777778rem;
-  }
-}
-@media (499 <= width < 600px) {
-  .title {
-    margin-left: 8rem;
   }
 }
 .title::after {
@@ -139,15 +132,15 @@ img {
   position: absolute;
   top: 0.8888888889rem;
   margin-left: 1.1111111111rem;
-}
-@media (0 <= width < 600px) {
-  .title::after {
-    width: 50%;
-  }
+  margin-right: 1.1111111111rem;
 }
 @media (0 <= width < 500px) {
   .title::after {
+    display: block;
+    top: 3.5ch;
     width: 100%;
+    margin-left: 0;
+    margin-right: 0;
   }
 }
 
@@ -157,6 +150,9 @@ img {
   gap: 1.1111111111rem;
   align-items: start;
   grid-auto-rows: min-content;
+  padding: 0 1.1111111111rem;
+  margin-top: 1.1111111111rem;
+  justify-self: center;
 }
 @media (0 <= width < 900px) {
   .intro {
@@ -222,11 +218,11 @@ img {
   }
 }
 .intro div address {
+  border-top: solid 0.1111111111rem #2a2426;
   padding-top: 0.5555555556rem;
 }
 .intro div p {
   padding-bottom: 0.5555555556rem;
-  border-bottom: solid 0.1111111111rem #2a2426;
 }
 .intro div::after {
   content: "";
@@ -247,20 +243,24 @@ img {
 }
 
 .menu {
+  width: 90%;
   display: grid;
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: 5fr 7fr;
   gap: 3.5555555556rem;
   align-items: start;
-  justify-self: start;
-  margin-left: 7.1111111111rem;
-  width: max-content;
+  margin-top: 3.5555555556rem;
+  margin-bottom: 3.5555555556rem;
+  justify-self: center;
 }
 .menu section {
+  margin-left: 4.4444444444rem;
   grid-column: 2;
   position: relative;
 }
-.menu section h1 {
-  margin-right: 15rem;
+@media (0 <= width < 500px) {
+  .menu section {
+    margin-left: 0;
+  }
 }
 .menu section h2 {
   font-family: "Aref Ruqaa", serif;
@@ -285,20 +285,24 @@ img {
   border-radius: 50%;
   position: absolute;
   top: 1rem;
-  right: -14rem;
+  right: 2rem;
   border: 0.5555555556rem solid #cbc6b9;
+}
+@media (0 <= width < 1200px) {
+  .menu section img {
+    height: 8.8888888889rem;
+  }
 }
 @media (0 <= width < 1000px) {
   .menu section img {
-    height: 6.6666666667rem;
+    height: 7.7777777778rem;
     top: 3rem;
-    right: -10rem;
   }
 }
 @media (0 <= width < 900px) {
   .menu section img {
-    top: 4rem;
-    left: -14rem;
+    top: 3rem;
+    left: -16rem;
   }
 }
 @media (0 <= width < 500px) {
@@ -308,55 +312,33 @@ img {
 }
 @media (0 <= width < 900px) {
   .menu {
-    margin-top: 2.2222222222rem;
-    margin-right: 2.2222222222rem;
-    margin-left: 2.2222222222rem;
+    margin-left: 0;
+    margin-top: 7.1111111111rem;
   }
 }
 @media (0 <= width < 500px) {
   .menu {
-    margin: 2rem auto;
+    margin-left: 5%;
+    justify-self: start;
     display: flex;
     flex-direction: column;
     gap: 1.1111111111rem;
   }
 }
+@media (0 <= width < 500px) {
+  .menu .title::after {
+    width: 70vw;
+  }
+}
 
 .contact {
   display: grid;
-  grid-template-columns: auto 1fr;
-  gap: 2.2222222222rem;
+  grid-template-columns: 5fr 7fr;
+  gap: 3.5555555556rem;
   align-items: start;
+  margin: 4.4444444444rem auto;
+  width: 90%;
   justify-self: center;
-  justify-content: center;
-  justify-items: start;
-  margin-left: 7.1111111111rem;
-  margin-right: 7.1111111111rem;
-}
-.contact h1 {
-  margin-right: 15vw;
-  width: 100%;
-}
-.contact h1::after {
-  width: 70%;
-}
-@media (0 <= width < 900px) {
-  .contact h1::after {
-    width: 40vw;
-    margin-right: 0;
-  }
-}
-@media (0 <= width < 900px) {
-  .contact h1 {
-    margin-left: 1rem;
-  }
-}
-@media (365 <= width < 600px) {
-  .contact h1 {
-    text-align: center;
-    margin: 0;
-    margin-left: -5rem;
-  }
 }
 .contact form {
   width: 100%;
@@ -368,8 +350,9 @@ img {
 }
 .contact input,
 .contact textarea {
-  color: #2a2426;
   width: 100%;
+  max-width: 600px;
+  color: #2a2426;
   padding: 0 0.2777777778rem;
   height: 2.2222222222rem;
   border: 0.1111111111rem solid #988c77;
@@ -403,6 +386,7 @@ img {
   display: inline-block;
 }
 .contact address img {
+  border: 0.5555555556rem solid #cbc6b9;
   margin-top: 1rem;
   width: 100%;
 }
@@ -411,10 +395,24 @@ img {
     grid-column: 1;
   }
 }
+@media (0 <= width < 500px) {
+  .contact address img {
+    width: 100vw;
+    border: none;
+  }
+}
 @media (0 <= width < 900px) {
   .contact address {
     margin-top: 0;
     margin-bottom: 0;
+  }
+}
+.contact .title::after {
+  width: 50%;
+}
+@media (0 <= width < 900px) {
+  .contact .title::after {
+    width: 70vw;
   }
 }
 .contact button {
@@ -436,16 +434,34 @@ img {
 @media (0 <= width < 900px) {
   .contact {
     margin-top: 2.2222222222rem;
-    margin-right: 2.2222222222rem;
-    margin-left: 2.2222222222rem;
     display: flex;
     flex-direction: column;
     gap: 1.1111111111rem;
   }
 }
+
+footer {
+  background: #2a2426;
+  box-shadow: 0 0 0 0.5555555556rem;
+}
+
+.footer {
+  color: #edece4;
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1.7777777778rem 0.8888888889rem;
+}
+.footer img {
+  max-width: max-content;
+}
 @media (0 <= width < 600px) {
-  .contact {
-    margin: 0 auto 4.4444444444rem auto;
+  .footer {
+    gap: 1.1111111111rem;
+    flex-direction: column;
+    text-align: center;
   }
 }
 
